# email-triage-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: PLACEHOLDER.md
src/email_triage/: __init__.py  classifier.py  cli.py  db.py  gmail_client.py  prompts.py
