[project]
name = "email-triage-agent"
version = "0.1.0"
description = "Claude-powered CLI that triages Gmail inboxes — classifies, labels, and drafts replies."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Abdullah" }]

dependencies = [
    "anthropic>=0.49.0",
    "google-api-python-client>=2.165.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "sqlalchemy>=2.0.40",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "typer>=0.15.3",
    "rich>=14.0.0",
]

[project.scripts]
email-triage = "email_triage.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/email_triage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
]
